
    HDFS-5276. FileSystem.Statistics should use thread-local counters to avoid
    multi-threaded performance issues on read/write.  (Colin Patrick McCabe)

    HADOOP-9291. enhance unit-test coverage of package o.a.h.metrics2 (Ivan A.
    Veselovsky via jeagles)

    HADOOP-10064. Upgrade to maven antrun plugin version 1.7 (Arpit Agarwal via
    jeagles)

  OPTIMIZATIONS

    HADOOP-9748. Reduce blocking on UGI.ensureInitialized (daryn)

  BUG FIXES

    HADOOP-9964. Fix deadlocks in TestHttpServer by synchronize
    ReflectionUtils.printThreadInfo. (Junping Du via llu)

    HADOOP-9582. Non-existent file to "hadoop fs -conf" doesn't throw error
    (Ashwin Shankar via jlowe)

    HADOOP-9817. FileSystem#globStatus and FileContext#globStatus need to work
    with symlinks. (Colin Patrick McCabe via Andrew Wang)

    HADOOP-9652.  RawLocalFs#getFileLinkStatus does not fill in the link owner
    and mode.  (Andrew Wang via Colin Patrick McCabe)

    HADOOP-9875.  TestDoAsEffectiveUser can fail on JDK 7.  (Aaron T. Myers via
    Colin Patrick McCabe)

    HADOOP-9865.  FileContext#globStatus has a regression with respect to
    relative path.  (Chuan Lin via Colin Patrick McCabe)


    HADOOP-9909. org.apache.hadoop.fs.Stat should permit other LANG.
    (Shinichi Yamashita via Andrew Wang)

    HADOOP-9908. Fix NPE when versioninfo properties file is missing (todd)

    HADOOP-9350. Hadoop not building against Java7 on OSX
    (Robert Kanter via stevel)

    HADOOP-9929. Insufficient permissions for a path reported as file not found.
    (Contributed by Colin Patrick McCabe)

    HADOOP-9791. Add a test case covering long paths for new FileUtil access
    check methods (ivanmi)

    HADOOP-9981. globStatus should minimize its listStatus and getFileStatus
    calls.  (Contributed by Colin Patrick McCabe)

    HADOOP-9016. HarFsInputStream.skip(long) must never return negative value.
    (Ivan A. Veselovsky via jeagles)
